# opentelemetry_tracing_example

./: Cargo.toml
src/: main.rs
